--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@coreui/react": "^4.11.1",
+    "@emailjs/browser": "^4.3.3",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "framer-motion": "^11.0.14",
